--- a/.github/workflows/ARM_Plus_OpenWrt_immortalwrt.yml
+++ b/.github/workflows/ARM_Plus_OpenWrt_immortalwrt.yml
@@ -96,7 +96,7 @@ jobs:
         chmod +x $DIY_P2_SH
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P2_SH
-        
+
     - name: Setup Debug Session 'touch /tmp/keepalivegit'
       uses: csexton/debugger-action@master
 
@@ -333,6 +333,12 @@ jobs:
         chmod +x $DIY_P2_SH
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P2_SH
+
+    - name: Judge password
+      if: (github.event.inputs.myself == 'true' && github.event.inputs.myself  != 'false') 
+      run: |
+        cd openwrt
+        sed -i 's/root::0:0:99999:7:::/root:$1$4STyeJSm$/0KUZMiQA2TQbY1lWxLr8.:19144:0:99999:7:::/' package/emortal/default-settings/files/99-default-settings
 
     - name: Setup Debug Session 'touch /tmp/keepalivegit'
       if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') 
