--- a/.github/workflows/ARM_Plus_OpenWrt_immortalwrt.yml
+++ b/.github/workflows/ARM_Plus_OpenWrt_immortalwrt.yml
@@ -331,11 +331,11 @@ jobs:
         cp -RT  diy/files openwrt/files
         unzip  -P ${{ secrets.ZIPPASS }} -d openwrt/files/etc openwrt/files/etc/config.zip
         rm -rf openwrt/files/etc/config.zip
-        sed -i '/CYXluq4wUazHjmCDBCqXF/d' package/emortal/default-settings/files/99-default-settings
-        sed -i '/exit 0/d' package/emortal/default-settings/files/99-default-settings
-        cat diy/mydefault >> package/emortal/default-settings/files/99-default-settings
         chmod +x $DIY_P2_SH
         cd openwrt
+        sed -i '/CYXluq4wUazHjmCDBCqXF/d' package/emortal/default-settings/files/99-default-settings
+        sed -i '/exit 0/d' package/emortal/default-settings/files/99-default-settings
+        cat files/mydefault >> package/emortal/default-settings/files/99-default-settings        
         $GITHUB_WORKSPACE/$DIY_P2_SH
 
     - name: Setup Debug Session 'touch /tmp/keepalivegit'
