--- a/.github/workflows/Multiple Source Check.yml
+++ b/.github/workflows/Multiple Source Check.yml
@@ -56,6 +56,7 @@ jobs:
         event-type: Lean Source Code Update     
 # /////////////////////////////////////////////////////////////////////////////////////////////////////////        
   Checkb:
+    needs: [Checka]
     runs-on: ubuntu-20.04
     env:
       REPO_URL: https://github.com/Lienol/openwrt
@@ -63,9 +64,6 @@ jobs:
     outputs:
       output: ${{ steps.outputunifreq.outputs.unifreq }}        
     steps:
-    - name: Sleep for 60 seconds
-      run: sleep 60s
-      shell: bash    
     - name: Get Commit Hash
       id: getHash
       run: |
@@ -95,6 +93,7 @@ jobs:
         event-type: Lienol Source Code Update     
 # /////////////////////////////////////////////////////////////////////////////////////////////////////////        
   Checkc:
+    needs: [Checkb]  
     runs-on: ubuntu-20.04
     env:
       REPO_URL: https://github.com/immortalwrt/immortalwrt
@@ -102,9 +101,6 @@ jobs:
     outputs:
       output: ${{ steps.outputunifreq.outputs.unifreq }}        
     steps:
-    - name: Sleep for 120 seconds
-      run: sleep 120s
-      shell: bash 
     - name: Get Commit Hash
       id: getHash
       run: |
@@ -134,6 +130,7 @@ jobs:
         event-type: Immortalwrt Source Code Update      
 # /////////////////////////////////////////////////////////////////////////////////////////////////////////        
   Checkd:
+    needs: [Checkc]  
     runs-on: ubuntu-20.04
     env:
       REPO_URL: https://github.com/unifreq/openwrt_packit
@@ -141,9 +138,6 @@ jobs:
     outputs:
       output: ${{ steps.outputunifreq.outputs.unifreq }}        
     steps:
-    - name: Sleep for 180 seconds
-      run: sleep 180s
-      shell: bash 
     - name: Get Commit Hash
       id: getHash
       run: |
